@@ -325,7 +325,7 @@
 	  ;; error condition: no accounts specified
          
 	  (gnc:html-document-add-object! 
-	   doc (gnc:html-make-no-account-warning)))
+	   doc (gnc:html-make-no-account-warning (_ "Balance Sheet"))))
       doc))
 
   (gnc:define-report 
